# openedx-tutor-rag

./: .gitignore  README.md  cli_qa.py  gemini_client.py  main.py  pyproject.toml
.streamlit/: config.toml
qdrant_rag/: MANIFEST.in  Makefile  README.rst  pyproject.toml
qdrant_rag/qdrant_rag/: config.py  extraction.py  plugin.py
qdrant_rag/qdrant_rag/patches/: local-docker-compose-services
rag/: embeddings.py  qa_service.py  retriever_llama.py
streamlit_app/: app.py  backend.py  styles.css  styles_backup.css  ui.py
tutor-plugin/: qdrant.py
