[project]
name = "openedx-tutor-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "llama-index",
    "llama-index-vector-stores-qdrant",
    "llama-index-embeddings-fastembed",
    "llama-index-embeddings-huggingface",
    "fastembed",
    "nltk>=3.9.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.0",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "tutor[full]>=20.0.2",
]
